--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ comer bem?</a></h2>
 								<article>
 									<header>
 										<span class="date">10 de Maio, 2024</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">Rótulos<br />
+										Como ler?</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
